--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@opaquejs/query-engine",
+  "name": "@opaquejs/knex-translator",
   "version": "0.1.3",
-  "description": "The querying engine for Opaque ORM queries",
+  "description": "Translates Opaque Queries for any knex-like query-builder",
   "main": "lib/index.js",
   "files": [
     "/lib"
@@ -10,7 +10,8 @@
     "@opaquejs/testing": "^0.2.8",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "knex": "^0.21.18"
   },
   "scripts": {
     "test": "jest",
@@ -20,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/opaquejs/query-builder.git"
+    "url": "git+https://github.com/opaquejs/knex-translator.git"
   },
   "keywords": [
     "opaquejs",
@@ -30,11 +31,10 @@
   "author": "Sebastian Dittrich",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/opaquejs/query-builder/issues"
+    "url": "https://github.com/opaquejs/knex-translator/issues"
   },
-  "homepage": "https://github.com/opaquejs/query-builder#readme",
+  "homepage": "https://github.com/opaquejs/knex-translator#readme",
   "dependencies": {
-    "@opaquejs/query": "^0.2.2",
-    "knex": "^0.21.18"
+    "@opaquejs/query": "^0.2.2"
   }
 }
