--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "devDependencies": {
     "@opaquejs/testing": "^0.2.8",
     "jest": "^26.6.3",
+    "knex": "^0.21.18",
     "ts-jest": "^26.5.1",
-    "typescript": "^4.2.2",
-    "knex": "^0.21.18"
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "test": "jest",
